--- a/server/core/main.handlebars
+++ b/server/core/main.handlebars
@@ -63,6 +63,13 @@
     </head>
     <body>
         <div id="app"></div>
+        <script type="application/json" id="data">
+            {{{ JSON store }}}
+        </script>
+        <script>
+            const data = JSON.parse(document.querySelector("#data").textContent);
+            console.log(data);
+        </script>
         <script src="/dist/chunk-vendors.js"></script>
         <script src="/dist/index.js"></script>
     </body>
