--- a/server/core/main.handlebars
+++ b/server/core/main.handlebars
@@ -60,6 +60,10 @@
         <meta name="twitter:card" content="summary_large_image" />
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+        <style>
+            {{ styles }}
+        </style>
     </head>
     <body>
         <div id="app"></div>
