--- a/server/core/main.handlebars
+++ b/server/core/main.handlebars
@@ -1,80 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{{ metaInfo.title }}</title>
 
-        <link rel="manifest" href="/assets/manifest.json" />
+<head>
+    <title>{{ metaInfo.title }}</title>
 
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="manifest" href="/assets/manifest.json" />
 
-        <meta name="msapplication-TileColor" content="#FFFFFF" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-        <meta name="apple-mobile-web-app-title" content="{{ metaInfo.title }}" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/favicons/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/favicons/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicons/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicons/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/favicons/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicons/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/favicons/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/favicons/apple-touch-icon-152x152.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="{{ metaInfo.title }}" />
 
-        <link rel="icon" type="image/png" href="/assets/favicons/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="/assets/favicons/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/favicons/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/favicons/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicons/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicons/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/favicons/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicons/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/favicons/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/favicons/apple-touch-icon-152x152.png" />
 
-        <meta name="application-name" content="{{ app.name }}" />
-        <meta name="msapplication-TileColor" content="#FFFFFF" />
-        <meta name="msapplication-TileImage" content="/assets/favicons/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="/assets/favicons/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="/assets/favicons/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="/assets/favicons/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="/assets/favicons/mstile-310x310.png" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-128.png" sizes="128x128" />
 
-        <meta property="og:type" content="website" />
-        <meta name="author" content="{{ app.name }}" />
-        <meta name="description" content="{{ metaInfo.description }}" />
-        <meta name="application-name" content="{{ app.name }}" />
-        <meta name="theme-color" content="#000000" />
+    <meta name="application-name" content="{{ app.name }}" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="/assets/favicons/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="/assets/favicons/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="/assets/favicons/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="/assets/favicons/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="/assets/favicons/mstile-310x310.png" />
 
-        <meta property="og:title" content="{{ metaInfo.title }}" />
-        <meta property="og:description" content="{{ metaInfo.description }}" />
-        <meta property="og:url" content="https://{{ app.domain }}{{ path }}" />
-        <meta property="og:image" content="{{ app.domain }}/{{ metaInfo.image }}" />
-        <meta property="og:site_name" content="{{ app.name }}" />
-        <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website" />
+    <meta name="author" content="{{ app.name }}" />
+    <meta name="description" content="{{ metaInfo.description }}" />
+    <meta name="application-name" content="{{ app.name }}" />
+    <meta name="theme-color" content="#000000" />
 
-        <meta name="twitter:title" content="{{ metaInfo.title }}" />
-        <meta name="twitter:description" content="{{ metaInfo.description }}" />
-        <meta name="twitter:image" content="{{ app.domain }}/{{ metaInfo.image }}" />
-        <meta name="twitter:site" content="@{{ app.slug }}" />
-        <meta name="twitter:creator" content="@{{ app.slug }}" />
-        <meta name="twitter:url" content="https://{{ app.domain }}{{ path }}">
-        <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="{{ metaInfo.title }}" />
+    <meta property="og:description" content="{{ metaInfo.description }}" />
+    <meta property="og:url" content="https://{{ app.domain }}{{ path }}" />
+    <meta property="og:image" content="{{ app.domain }}/{{ metaInfo.image }}" />
+    <meta property="og:site_name" content="{{ app.name }}" />
+    <meta property="og:locale" content="en_US">
 
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <meta name="twitter:title" content="{{ metaInfo.title }}" />
+    <meta name="twitter:description" content="{{ metaInfo.description }}" />
+    <meta name="twitter:image" content="{{ app.domain }}/{{ metaInfo.image }}" />
+    <meta name="twitter:site" content="@{{ app.slug }}" />
+    <meta name="twitter:creator" content="@{{ app.slug }}" />
+    <meta name="twitter:url" content="https://{{ app.domain }}{{ path }}">
+    <meta name="twitter:card" content="summary_large_image" />
 
-        <style>
-            {{ styles }}
-        </style>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="application/json" id="data">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+    <style>
+        {
+                {
+                styles
+            }
+
+        }
+    </style>
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="application/json" id="data">
             {{{ JSON store }}}
         </script>
-        <script>
-            const data = JSON.parse(document.querySelector("#data").textContent);
-            console.log(data);
-        </script>
-        <script src="/dist/chunk-vendors.js"></script>
-        <script src="/dist/index.js"></script>
-    </body>
+    <script>
+        const data = JSON.parse(document.querySelector("#data").textContent);
+        console.log(data);
+    </script>
+    <script src="/dist/chunk-vendors.js"></script>
+    <script src="/dist/index.js"></script>
+</body>
+
 </html>
