--- a/app/styles/inputs.scss
+++ b/app/styles/inputs.scss
@@ -1,22 +1,6 @@
 input,
 textarea {
-    appearance: none;
-    border-style: none;
-    box-sizing: border-box;
-    padding: 0.5rem 0.75rem;
-    font-size: 1rem;
-    border-radius: 0.25rem;
-    margin-bottom: 1rem;
-    font-family: sans-serif;
     border: solid 1px rgba(0, 0, 0, 0.075);
-    outline: none;
-    transition: box-shadow 0.25s ease,
-                border-color 0.25s ease;
-
-    &:focus {
-        box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.15);
-        border-color: rgba(0, 0, 0, 0.15);
-    }
 }
 
 input[type="submit"],
@@ -29,46 +13,6 @@ textarea {
     width: 100%;
 }
 
-input[type="checkbox"] {
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.1);
-    border: none;
-    margin: 0;
-    cursor: pointer;
-    box-shadow: none;
-    padding: 0.625rem;
-    transition: background-color 0.15s ease;
-
-    &:before {
-        font-weight: bold;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        content: '✔';
-        color: rgba(0, 0, 0, 0);
-        transform: translate(-50%, -50%);
-        transition: color 0.15s ease;
-        font-size: 0.875rem;
-    }
-
-    &:hover,
-    &:focus {
-        background-color: rgba(0, 0, 0, 0.15);
-
-        &:before {
-            color: rgba(0, 0, 0, 0.25);
-        }
-    }
-
-    &:checked {
-        background-color: var(--primary-color);
-
-        &:before {
-            color: white;
-        }
-    }
-}
-
 button,
 input[type="submit"] {
     border-radius: 0.25rem;
@@ -76,31 +20,11 @@ input[type="submit"] {
     cursor: pointer;
     border-style: none;
     font-family: $primary-font;
-    transition: background-color 0.25s ease,
-                filter 0.25s ease;
+    transition: background-color 0.25s ease, filter 0.25s ease;
 }
 
 input[type="number"] {
     font-size: 1.125rem;
-}
-
-select {
-    font-size: 1rem;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    border-style: none;
-    font-size: 1.125rem;
-    width: 100%;
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.25s ease,
-                border-color 0.25s ease;
-
-    &:hover,
-    &:focus {
-        outline: 0;
-        box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.25);
-        border-color: rgba(0, 0, 0, 0.25);
-    }
 }
 
 label {
