--- a/server/core/main.handlebars
+++ b/server/core/main.handlebars
@@ -63,12 +63,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
     <style>
-        {
-                {
-                styles
-            }
-
-        }
+        {{styles}}
     </style>
 </head>
 
